<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box five</string>
    <string name="box_red">RED</string>
    <string name="box_yellow">YELLOW</string>
    <string name="box_green">GREEN</string>
    <string name="how_to_play">How To Play</string>
    <string name="tap_on_button">Tap on buttons or boxes to change their colors</string>
</resources>